--- a/AutomationFramwork/pom.xml
+++ b/AutomationFramwork/pom.xml
@@ -32,6 +32,12 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>4.17.0</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.6.1</version>
+</dependency>
 
 	<dependency>
 	    <groupId>org.testng</groupId>
